# tuskdata

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  pyproject.toml  requirements.txt
scripts/: install-tailwind.sh  vendor.sh
src/tusk/: __init__.py  cli.py
src/tusk/admin/: __init__.py  backup.py  extensions.py  maintenance.py  monitoring.py  pitr.py  processes.py  roles.py  settings.py  stats.py
src/tusk/cluster/: __init__.py  models.py  scheduler.py  worker.py
src/tusk/core/: __init__.py  auth.py  config.py  connection.py  deps.py  download_hooks.py  downloads.py  files.py  geo.py  history.py  logging.py  notifications.py  result.py  scheduled_tasks.py  scheduler.py  workspace.py
src/tusk/engines/: __init__.py  duckdb_engine.py  polars_engine.py  postgres.py  sqlite.py
src/tusk/plugins/: __init__.py  base.py  config.py  registry.py  storage.py  templates.py
src/tusk/studio/: __init__.py  app.py  htmx.py
src/tusk/studio/routes/: __init__.py  admin.py  api.py  auth.py  base.py  cluster.py  data.py  downloads.py  files.py  notifications.py  pages.py  scheduler.py  settings.py
src/tusk/studio/static/: admin.js  cluster.js  data.js  pipeline.js  profile.js  studio.js  styles.css  users.js
src/tusk/studio/templates/: admin.html  base.html  cluster.html  data.html  index.html  login.html  notifications_settings.html  profile.html  users.html
src/tusk/studio/templates/components/: card.html  feedback.html  forms.html  layout.html  map.html  pipeline.html  status.html  table.html
src/tusk/studio/templates/partials/: error-message.html  notification-bell.html  notification-list.html
src/tusk/studio/templates/partials/admin/: backups.html  bloat.html  extensions.html  indexes.html  locks.html  logs.html  pitr.html  processes.html  replication.html  roles.html  settings.html  slow-queries.html  stats.html
src/tusk/studio/templates/partials/cluster/: job-result.html  jobs.html  status.html  workers.html
src/tusk/studio/templates/partials/data/: downloads.html  duckdb-extensions.html  file-browser.html  plugin-datasets.html  saved-pipelines.html
src/tusk/studio/templates/partials/studio/: connections-list.html  files-list.html  history.html  results-table.html  saved-queries.html  schema-tree.html
src/tusk/studio/templates/partials/users/: audit.html  groups.html  list.html
tests/: conftest.py  test_auth.py  test_connection.py  test_downloads.py  test_health.py  test_notifications.py  test_pipeline.py  test_plugin_registry.py  test_polars_safe_eval.py
